fix overflow prop

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -21,5 +21,5 @@
 
 .crash-header-card-body {
   height: 400px;
-  overflow: "auto";
+  overflow-y: auto;
 }
